--- a/V2_dev/SABRE2-V3.ui
+++ b/V2_dev/SABRE2-V3.ui
@@ -490,6 +490,11 @@
             <string>1</string>
            </property>
           </row>
+          <row>
+           <property name="text">
+            <string>2</string>
+           </property>
+          </row>
           <column>
            <property name="text">
             <string>Joint #</string>
@@ -546,6 +551,28 @@
            </property>
           </item>
           <item row="0" column="3">
+           <property name="text">
+            <string>0</string>
+           </property>
+           <property name="textAlignment">
+            <set>AlignHCenter|AlignVCenter|AlignCenter</set>
+           </property>
+           <property name="flags">
+            <set>ItemIsDragEnabled|ItemIsUserCheckable</set>
+           </property>
+          </item>
+          <item row="1" column="0">
+           <property name="text">
+            <string>2</string>
+           </property>
+           <property name="textAlignment">
+            <set>AlignHCenter|AlignVCenter|AlignCenter</set>
+           </property>
+           <property name="flags">
+            <set>ItemIsDragEnabled|ItemIsUserCheckable</set>
+           </property>
+          </item>
+          <item row="1" column="3">
            <property name="text">
             <string>0</string>
            </property>
